--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 
-baseurl: "/" # the subpath of your site, e.g. /blog
-url: "https://dobrica.sh/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://dobrica.sh" # the base hostname & protocol for your site, e.g. http://example.com
 
 #######################################################################
 # Settings related to the Header and your About page go here,such as 
